--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start-dev": "nodemon server.js",
     "start": "node server.js",
-    "setup-production": "pwd && npm run install-client && npm run build-client && npm install",
+    "setup-production": "pwd && npm run install-client && npm run build-client && npm install && rm -rf client/node_modules",
     "install-client": "pwd && cd client && npm install && pwd",
     "build-client": "pwd && cd client && pwd && npm run build"
   },
